# fastnear-api-server-rs

./: .gitignore  Cargo.toml  README.md  index.html  run.sh  skill.md
openapi/: openapi.yaml
src/: api.rs  database.rs  lib.rs  main.rs  openapi.rs  rpc.rs  status.rs  types.rs  utils.rs
src/redis_db/: mod.rs  stream.rs
