[package]
name = "data-server"
version = "0.7.0"
edition = "2021"

[[bin]]
path = "src/main.rs"
name = "server"

[dependencies]
actix-web = "4.5.1"
actix-cors = "0.7.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenv = "0.15.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
redis = { version = "0.25.2", features = ["tokio-comp", "tokio-native-tls-comp", "streams"] }
itertools = "0.12.0"
tokio = { version = "1.36.0", features = ["full", "tracing"] }
tracing-actix-web = "0.7.9"

near-account-id = "0.1.0"
near-crypto = "0.20.0"

reqwest = { version = "0.11.24", features = ["json"] }
base64 = "0.21.7"
hex = "0.4.3"
openssl-probe = "0.1.5"
